@@ -259,108 +259,113 @@ Status: OK
 ```
 SPI NAND Flash Support List:
 001. GIGADEVICE GD5F1GQ4UA
-002. GIGADEVICE GD5F1GQ4UB
-003. GIGADEVICE GD5F1GQ4UC
-004. GIGADEVICE GD5F1GQ4UE
-005. GIGADEVICE GD5F1GQ5UE
-006. GIGADEVICE GD5F1GQ5RE
-007. GIGADEVICE GD5F2GQ5UE
-008. GIGADEVICE GD5F2GQ5RE
-009. GIGADEVICE GD5F2GQ4UB
-010. GIGADEVICE GD5F2GQ4UE
-011. GIGADEVICE GD5F2GQ4UC
-012. GIGADEVICE GD5F4GQ4UB
-013. GIGADEVICE GD5F4GQ4UC
-014. ESMT F50D1G41LB(2M)
-015. ESMT F50L512
-016. ESMT F50L1G
-017. ESMT F50L1G41LB
-018. ESMT F50L2G41LB
-019. WINBOND W25N01GV
-020. WINBOND W25N01GW
-021. WINBOND W25N02KV
-022. WINBOND W25N04KV
-023. WINBOND W25M02GV
-024. MXIC MX35LF1GE4AB
-025. MXIC MX35LF2GE4AB
-026. MXIC MX35LF2G14AC
-027. MXIC MX35LF2GE4AD
-028. MXIC MX35LF1G24AD
-029. MXIC MX35LF2G24AD
-030. MXIC MX35LF4G24AD
-031. MXIC MX35LF2G24AD-Z4I8
-032. MXIC MX35LF4G24AD-Z4I8
-033. MXIC MX35UF1GE4AD
-034. MXIC MX35UF2GE4AD
-035. MXIC MX35UF4GE4AD
-036. ZENTEL A5U12A21ASC
-037. ZENTEL A5U1GA21BWS
-038. ETRON EM73C044SNB
-039. ETRON EM73C044SND
-040. ETRON EM73C044SNF
-041. ETRON EM73C044VCA
-042. ETRON EM73C044VCD
-043. ETRON EM73D044VCA
-044. ETRON EM73D044VCB
-045. ETRON EM73D044VCD
-046. ETRON EM73D044VCG
-047. ETRON EM73D044VCH
-048. ETRON EM73D044SNA
-049. ETRON EM73D044SNC
-050. ETRON EM73D044SND
-051. ETRON EM73D044SNF
-052. ETRON EM73E044SNA
-053. TOSHIBA TC58CVG0S3H
-054. TOSHIBA TC58CVG1S3H
-055. TOSHIBA TC58CVG2S0H
-056. KIOXIA TC58CVG2S0HRAIJ
-057. MICRON MT29F1G01
-058. MICRON MT29F2G01
-059. MICRON MT29F4G01
-060. HEYANG HYF1GQ4UAACAE
-061. HEYANG HYF2GQ4UAACAE
-062. HEYANG HYF2GQ4UHCCAE
-063. HEYANG HYF1GQ4UDACAE
-064. HEYANG HYF2GQ4UDACAE
-065. PN PN26G01A-X
-066. PN PN26G02A-X
-067. PN PN26Q01A-X
-068. ATO ATO25D1GA
-069. ATO ATO25D2GA
-070. ATO ATO25D2GB
-071. FM FM25S01
-072. FM FM25S01A
-073. FM FM25S02A
-074. FM FM25G01B
-075. FM FM25G02B
-076. FM FM25G02C
-077. FM FM25G02
-078. XTX XT26G02B
-079. XTX XT26G01C
-080. XTX XT26G02C
-081. XTX XT26G01A
-082. XTX XT26G02A
-083. MIRA PSU1GS20BN
-084. BIWIN BWJX08U
-085. BIWIN BWET08U
-086. FORESEE FS35ND01GD1F1
-087. FORESEE FS35ND01GS1F1
-088. FORESEE FS35ND02GS2F1
-089. FORESEE FS35ND02GD1F1
-090. FORESEE FS35ND01GS1Y2
-091. FORESEE FS35ND02G-S3Y2
-092. FORESEE FS35ND04G-S2Y2
-093. DS DS35Q2GA
-094. DS DS35M2GA
-095. DS DS35Q1GA
-096. DS DS35M1GA
-097. FISON CS11G0T0A0AA
-098. FISON CS11G1T0A0AA
-099. FISON CS11G0G0A0AA
-100. TYM TYM25D2GA01
-101. TYM TYM25D2GA02
-102. TYM TYM25D1GA03
-103. XINCUN XCSP1AAWH-NT
+002. GIGADEVICE GD5F2GQ4UA
+003. GIGADEVICE GD5F1GQ4UB
+004. GIGADEVICE GD5F1GQ4UC
+005. GIGADEVICE GD5F1GQ4UE
+006. GIGADEVICE GD5F1GQ5UE
+007. GIGADEVICE GD5F1GQ5RE
+008. GIGADEVICE GD5F2GQ5UE
+009. GIGADEVICE GD5F2GQ5RE
+010. GIGADEVICE GD5F2GQ4UB
+011. GIGADEVICE GD5F2GQ4UE
+012. GIGADEVICE GD5F2GQ4UC
+013. GIGADEVICE GD5F4GQ4UB
+014. GIGADEVICE GD5F4GQ4UC
+015. ESMT F50D1G41LB(2M)
+016. ESMT F50L512
+017. ESMT F50L1G
+018. ESMT F50L1G41LB
+019. ESMT F50L2G41LB
+020. WINBOND W25N01GV
+021. WINBOND W25N01GW
+022. WINBOND W25N02KV
+023. WINBOND W25N04KV
+024. WINBOND W25M02GV
+025. MXIC MX35LF1GE4AB
+026. MXIC MX35LF2GE4AB
+027. MXIC MX35LF2G14AC
+028. MXIC MX35LF2GE4AD
+029. MXIC MX35LF1G24AD
+030. MXIC MX35LF2G24AD
+031. MXIC MX35LF4G24AD
+032. MXIC MX35LF2G24AD-Z4I8
+033. MXIC MX35LF4G24AD-Z4I8
+034. MXIC MX35UF1GE4AD
+035. MXIC MX35UF2GE4AD
+036. MXIC MX35UF4GE4AD
+037. ZENTEL A5U12A21ASC
+038. ZENTEL A5U1GA21BWS
+039. ETRON EM73C044SNB
+040. ETRON EM73C044SND
+041. ETRON EM73C044SNF
+042. ETRON EM73C044VCA
+043. ETRON EM73C044VCD
+044. ETRON EM73D044VCA
+045. ETRON EM73D044VCB
+046. ETRON EM73D044VCD
+047. ETRON EM73D044VCG
+048. ETRON EM73D044VCH
+049. ETRON EM73D044SNA
+050. ETRON EM73D044SNC
+051. ETRON EM73D044SND
+052. ETRON EM73D044SNF
+053. ETRON EM73E044SNA
+054. TOSHIBA TC58CVG0S3H
+055. TOSHIBA TC58CVG1S3H
+056. TOSHIBA TC58CVG2S0H
+057. KIOXIA TC58CVG2S0HRAIJ
+058. MICRON MT29F1G01AA
+059. MICRON MT29F2G01AA
+060. MICRON MT29F4G01AA
+061. MICRON MT29F1G01AB
+062. MICRON MT29F2G01AB
+063. MICRON MT29F4G01AB
+064. MICRON MT29F4G01AD
+065. HEYANG HYF1GQ4UAACAE
+066. HEYANG HYF2GQ4UAACAE
+067. HEYANG HYF2GQ4UHCCAE
+068. HEYANG HYF1GQ4UDACAE
+069. HEYANG HYF2GQ4UDACAE
+070. PN PN26G01A-X
+071. PN PN26G02A-X
+072. PN PN26Q01A-X
+073. ATO ATO25D1GA
+074. ATO ATO25D2GA
+075. ATO ATO25D2GB
+076. FM FM25S01
+077. FM FM25S01A
+078. FM FM25S02A
+079. FM FM25G01B
+080. FM FM25G02B
+081. FM FM25G02C
+082. FM FM25G02
+083. XTX XT26G02B
+084. XTX XT26G01C
+085. XTX XT26G02C
+086. XTX XT26G01A
+087. XTX XT26G02A
+088. MIRA PSU1GS20BN
+089. BIWIN BWJX08U
+090. BIWIN BWET08U
+091. FORESEE FS35ND01GD1F1
+092. FORESEE FS35ND01GS1F1
+093. FORESEE FS35ND02GS2F1
+094. FORESEE FS35ND02GD1F1
+095. FORESEE FS35ND01GS1Y2
+096. FORESEE FS35ND02G-S3Y2
+097. FORESEE FS35ND04G-S2Y2
+098. DS DS35Q2GA
+099. DS DS35M2GA
+100. DS DS35Q1GA
+101. DS DS35M1GA
+102. FISON CS11G0T0A0AA
+103. FISON CS11G1T0A0AA
+104. FISON CS11G0G0A0AA
+105. TYM TYM25D2GA01
+106. TYM TYM25D2GA02
+107. TYM TYM25D1GA03
+108. XINCUN XCSP1AAWH-NT
 
 SPI NOR Flash Support List:
 001. AT26DF161
